<package>

  <name>lslidar_c4</name>
  <version>1.0.0</version>
  <description>
    Basic ROS support for the Leishen C4 LIDARs.
  </description>
  <maintainer email="support@lslidar.com">leo</maintainer>
  <author>leo</author>
  <license>Licensed under the Apache License, Version 2.0 </license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>lslidar_c4_driver</run_depend>
  <run_depend>lslidar_c4_msgs</run_depend>
  <run_depend>lslidar_c4_decoder</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
